# wings

./: .gitignore  CMakeLists.txt  LICENSE  README.md  wings.cpp  wings.h
.github/workflows/: cc.yml  static.yml
apps/alpha/: main.cpp
apps/beta/: edges-gs.glsl  points-vs.glsl  pyramids-fs.glsl  quads-fs.glsl  triangles-fs.glsl
apps/bwing/: edges-fs.glsl  main.cpp
apps/vwing/: index.html  main.cpp  points-gs.glsl  pyramids-gs.glsl  text-fs.glsl  text-gs.glsl  text-vs.glsl  triangles-fs.glsl  triangles-gs.glsl
apps/xwing/: index.html  main.cpp
example/: index.html  main.cpp  shaders.h
util/: CMakeLists.txt  array2d.h  clip.h  colormaps.h  field.cpp  field.h  glm.h  graphics.cpp  io.cpp  io.h  log.cpp  log.h  mesh.cpp  mesh.h  opengl.h  shader.cpp  shader.h  texture.cpp  texture.h  types.h  util.cpp  util.h
vwing/: index.html  main.cpp  points-fs.glsl  polygons-fs.glsl  polygons-gs.glsl  prisms-gs.glsl  quads-gs.glsl  quads-vs.glsl  tet-fs.glsl  tet-gs.glsl  tet-vs.glsl  triangles-gs.glsl
xwing/: index.html  main.cpp  shaders.h
